--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -222,6 +222,9 @@ textarea {
   &.active {
     color:white;
   }
+  @include media( max-width 640px ) {
+    left: 0;
+  }
 }
 //Footer
 footer {
@@ -325,6 +328,7 @@ nav {
     max-width: 460px;
     width: 100%;
     margin: 0px auto;
+    padding: 0 1.5em;
   }
 }
 // Message
@@ -579,6 +583,26 @@ button {
       }
     }
   }
+}
+button.form-submit {
+  background-color:transparent;
+  font-size:6em;
+  font-family:$sans-serif;
+  font-weight:bold;
+  margin: 0px auto;
+  padding:0px;
+  display: block;
+  width: auto;
+  @include transition(color .15s ease-in, opacity .75s ease-in);
+  &:hover {
+    color:$primary-color;
+  }
+  &:disabled {
+    opacity:0;
+  }
+}
+.killswitch, .timestamp {
+  display:none;
 }
 
 
@@ -842,7 +866,7 @@ p.author {
 	width: 100%;
 	vertical-align: top;
 }
-.input__field {
+.input-field {
 	position: relative;
 	display: block;
 	float: right;
@@ -856,10 +880,10 @@ p.author {
 	font-family: $sans-serif-2;
 	-webkit-appearance: none; /* for box shadows to show on iOS */
 }
-.input__field:focus {
+.input-field:focus {
 	outline: none;
 }
-.input__label-content {
+.input-label-content {
 	position: relative;
 	display: block;
 	padding: 1.6em 0;
@@ -876,19 +900,19 @@ p.author {
 	font-size: 150%;
 }
 /* Nao */
-.input--nao {
+.input-nao {
 	overflow: hidden;
 	padding-top: 1em;
 }
 
-.input__field--nao {
+.input-field-nao {
 	padding: 0.5em 0em 0.25em 3em;
 	width: 100%;
 	background: transparent;
 	color: #9da8b2;
 	font-size: 1.25em;
 }
-.input__label--nao {
+.input-label-nao {
 	position: absolute;
 	top: 0;
 	font-size: 1em;
@@ -905,7 +929,7 @@ p.author {
 	-webkit-transition-timing-function: ease-out;
 	transition-timing-function: ease-out;
 }
-.graphic--nao {
+.graphic-nao {
 	stroke: #92989e;
   padding:0px;
 	pointer-events: none;
@@ -914,32 +938,31 @@ p.author {
 	-webkit-transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
 	transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
 }
-.input__field--nao:focus + .input__label--nao,
-.input--filled .input__label--nao {
+.input-field-nao:focus + .input-label-nao,
+.input-filled .input-label-nao {
 	color: $heading-font-color;
 	-webkit-transform: translate3d(0, -1.25em, 0) scale3d(0.75, 0.75, 1);
 	transform: translate3d(0, -1.25em, 0) scale3d(0.75, 0.75, 1);
 }
-.input__field--nao:focus ~ .graphic--nao,
-.input--filled .graphic--nao {
+.input-field-nao:focus ~ .graphic-nao,
+.input-filled .graphic-nao {
 	stroke: $heading-font-color;
 	-webkit-transform: translate3d(-66.6%, 0, 0);
 	transform: translate3d(-66.6%, 0, 0);
 }
 /* Kozakura */
-.input--kozakura {
+.input-kozakura {
 	overflow: hidden;
 }
-
-.input__field--kozakura {
+.input-field-kozakura {
 	padding: 0 1em;
 	width: 100%;
 	background: transparent;
 	color: #2F3238;
 	font-size: 1.55em;
+  resize: none;
 }
-
-.input__label--kozakura {
+.input-label-kozakura {
 	width: 100%;
 	text-align: left;
 	top: 1em;
@@ -951,14 +974,13 @@ p.author {
 	-webkit-transition: -webkit-transform 0.3s;
 	transition: transform 0.3s;
 }
-
-.input__label-content--kozakura {
+.input-label-content-kozakura {
 	color: #444;
 	padding: 0.4em 0 0.25em;
 	-webkit-transition: -webkit-transform 0.3s;
 	transition: transform 0.3s;
 }
-.graphic--kozakura {
+.graphic-kozakura {
 	fill: #f1f1f1;
 	pointer-events: none;
 	top: 0;
@@ -970,31 +992,31 @@ p.author {
 	transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
 }
 
-.input__field--kozakura:focus,
-.input--filled .input__field--kozakura {
+.input-field-kozakura:focus,
+.input-filled .input-field-kozakura {
 	-webkit-transition: opacity 0s 0.35s;
 	transition: opacity 0s 0.35s;
 	opacity: 1;
 }
 
-.input__field--kozakura:focus + .input__label--kozakura,
-.input--filled .input__label--kozakura {
+.input-field-kozakura:focus + .input-label-kozakura,
+.input-filled .input-label-kozakura {
 	-webkit-transition-delay: 0.15s;
 	transition-delay: 0.15s;
 	-webkit-transform: translate3d(0, 0, 0);
 	transform: translate3d(0, 0, 0);
 }
 
-.input__field--kozakura:focus + .input__label--kozakura .input__label-content--kozakura,
-.input--filled .input__label-content--kozakura {
+.input-field-kozakura:focus + .input-label-kozakura .input-label-content-kozakura,
+.input-filled .input-label-content-kozakura {
 	-webkit-transition-delay: 0.15s;
 	transition-delay: 0.15s;
 	-webkit-transform: translate3d(0, -100%, 0);
 	transform: translate3d(0, -100%, 0);
 }
 
-.input__field--kozakura:focus ~ .graphic--kozakura,
-.input--filled .graphic--kozakura {
+.input-field-kozakura:focus ~ .graphic-kozakura,
+.input-filled .graphic-kozakura {
 	fill: #fff;
 	-webkit-transform: translate3d(-66.6%, 0, 0);
 	transform: translate3d(-66.6%, 0, 0);
